--- a/Homeworks/Homework 7.qmd
+++ b/Homeworks/Homework 7.qmd
@@ -15,3 +15,14 @@ format:
 editor_options: 
   chunk_output_type: console
 ---
+
+
+## Question 1
+
+## Question 2
+
+## Question 3
+
+## Question 4
+
+## Question 5
